DOMjudge Programming Contest Judging System

Version 8.1.5DEV
----------------

Version 8.1.4 - 5 February 2023
-------------------------------
 - Added support for PHP 8.2.
 - Various security hardening options added.
 - Removed phpinfo page as security measure.

Version 8.1.3 - 19 September 2022
---------------------------------
 - Bugfix for interactive problems with racecondition when logging and
 terminating the submission
 - Bugfix to allow non-numeric external IDs

Version 8.1.2 - 23 July 2022
----------------------------
 - No changes, new tag to release with proper Changelog

Version 8.1.1 - 11 July 2022
----------------------------
 - Bugfix to create user when creating a team
 - Bugfix in creating users via the API

Version 8.1.0 - 1 June 2022
---------------------------
 - Document that minimum PHP version is now 7.4.0.
 - Add support for PHP 8.1.
 - Upgrade Symfony to 5.4 LTS and upgrade other library dependencies.
 - Replace calls to deprecated `strftime` with `date`. Note: if you have
   configured a custom `time_format`, you need to update it to the format
   supported by `date`.
 - Dropped the presentation-error verdict, databases from before DOMjudge 5.0
   will be altered to replace the verdict with wrong-answer.
 - Changed API import to give admin users a team.
 - Balloon users can now be created via the API.
 - Shadow mode will now fix missing data by reading from the primary CCS.
 - Fixed cgroup naming for docker to prevent sharing the same container.
 - Removed python2 in the chroot, remove python3 in favor of pypy3 in chroot.
 - Added support for sentry for logging.
 - Added default external IDs on all places.
 - Fixed medals on scoreboard for filtered scoreboards.
 - Dropped old balloons CLI.
 - Reimplementation of runpipe for interactive problems.
 - Individual files can now be removed from executables.
 - Added mysql socket option, for when port/IP is not used.
 - Added support for accounts.{yaml,json} for import script.